libwebkit2gtk fails to link without opengl https://bugs.webkit.org/show_bug.cgi?id=138332

Patch by Philip Chimento <philip.chimento@gmail.com> on 2015-06-21
Reviewed by Carlos Garcia Campos.

.:

* Source/cmake/OptionsGTK.cmake: USE(TEXTURE_MAPPER) must be
enabled regardless of whether OpenGL is, because certain symbols
such as WebCore::GraphicsLayer::create() need to be built.

Source/WebCore:

* CMakeLists.txt: The third-party ANGLE directories need to be
included even if ENABLE(GRAPHICS_CONTEXT_3D) is false. They must
be included after the OpenGL headers as the comment says.
* platform/graphics/texmap/BitmapTexturePool.cpp: Remove
reference to no longer existent header file.

Canonical link: https://commits.webkit.org/164248@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@185805 268f45cc-cd09-0410-ab3c-d52691b4dbfc