Source/WebCore/platform/graphics/texmap/BitmapTexturePool.cpp
@@ -30,8 +30,6 @@
 #if USE(TEXTURE_MAPPER_GL)
 #include "BitmapTextureGL.h"
 #include "GLContext.h"
-#else
-#include "BitmapTextureImageBuffer.h"
 #endif
 
 namespace WebCore {
